# blackbird

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.py
benches/nic/: README.md  run_nic_bench.sh
client/: CMakeLists.txt
client/include/blackbird/client/: receiver.hpp
client/src/: main.cpp  receiver.cpp
cmake/: CPM.cmake  CompilerOptimizations.cmake  CompilerWarnings.cmake
common/: CMakeLists.txt
common/include/blackbird/common/: constants.hpp  log.hpp  parse.hpp  payload.hpp  perf.hpp
common/src/: log.cpp  perf.cpp
scripts/: measure_path_latency.py  ops_status.sh
tc/: CMakeLists.txt
tc/src/: blackbird_tc_kern.c  main.cpp
xdp/: CMakeLists.txt
xdp/bench/: CMakeLists.txt  hotpath_bench.cpp  pipeline_bench.cpp
xdp/include/blackbird/xdp/: forward_config.h
xdp/src/: blackbird_xdp_fast_kern.c  blackbird_xdp_kern.c  fast_main.cpp  main.cpp
